make thunder more unlikely

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 	<script src="scene.js"></script>
 	<script src="index.js"></script>
 	
-	<body style="margin: 0; border: 0; display: flex; justify-content: center;align-items: center; height: 100%; background-color: #697e96">
+	<body style="margin: 0; border: 0; display: flex; justify-content: center;align-items: center; height: 100%;">
 	</body>
 </html>
