[Aviraj] Show name:score instead of score:score

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 															'<button id="share-url-clipboard" type="button" class="btn btn-block btn-default">Copy URL to <i class="fas fa-clipboard"></button>' +
 													'</div>';
 
-			var playGameButtonDOM = '<button id="play" type="button" class="btn btn-success" style="text-align:center;">Play</button>'
+			var playGameButtonDOM = '<button id="play" type="button" class="btn btn-block btn-success" style="text-align:center;">Play</button>'
 
 			$('#create-game-action').on('click', function () {
 
