add google analytics

--- a/game.html
+++ b/game.html
@@ -14,7 +14,18 @@
 	<script src="gameoverscene.js"></script>
 	<script src="scene.js"></script>
 	<script src="index.js"></script>
-	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161601283-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-161601283-1');
+	</script>
+
+
+
 	<body style="margin: 0; border: 0; display: flex; justify-content: center;align-items: center; height: 100%; background-color: #697e96">
 	</body>
 </html>
