--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
 	<!-- Bootstrap core CSS -->
 	<link href="assets/bootstrap_css/bootstrap.min.css" rel="stylesheet">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161601283-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-161601283-1');
+	</script>
+
+
 
 	<!-- Placing js here because few libraries need to load first. -->
 	<script src="assets/bootstrap_js/jquery-3.2.1.slim.min.js"></script>
