change copy of share buttons

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 	<script>
         var gameLink = '';
 
-        var newGameGeneratedSuccessDOM = '<b>Game Created Successfully! Share the game with your friends to play with them.</b> <br/> ';
+        var newGameGeneratedSuccessDOM = '<b>Game Created Successfully! Invite your friends and defeat them.</b> <br/> ';
 
         var gameShareDOM = '<div id="game-share-info">' +
-            '<button id="share-url-whatsapp" type="button" class="btn btn-block btn-primary">Share it on Whatsapp <i class="fab fa-whatsapp"></i></button>' +
-            '<button id="share-url-twitter" type="button" class="btn btn-block btn-primary">Share it on Twitter <i class="fab fa-twitter"></i></button>' +
-            '<button id="share-url-clipboard" type="button" class="btn btn-block btn-primary">Copy URL to <i class="fas fa-clipboard"></button>' +
+            '<button id="share-url-whatsapp" type="button" class="btn btn-block btn-primary">Invite friends from Whatsapp <i class="fab fa-whatsapp"></i></button>' +
+            '<button id="share-url-twitter" type="button" class="btn btn-block btn-primary">Invite friends from Twitter <i class="fab fa-twitter"></i></button>' +
+            '<button id="share-url-clipboard" type="button" class="btn btn-block btn-primary">Copy URL to Invite <i class="fas fa-clipboard"></button>' +
             '</div>';
 
         var playGameButtonDOM = '<button id="play" type="button" class="btn btn-block btn-success" style="text-align:center;">Play</button>'
