change copy of share buttons

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<script>
         var gameLink = '';
 
-        var newGameGeneratedSuccessDOM = '<b>Game Created Successfully! Invite your friends and defeat them.</b> <br/> ';
+        var newGameGeneratedSuccessDOM = '<b>Invite your friends and defeat them!!!</b> <br/> ';
 
         var gameShareDOM = '<div id="game-share-info">' +
             '<button id="share-url-whatsapp" type="button" class="btn btn-block btn-primary">Invite friends from Whatsapp <i class="fab fa-whatsapp"></i></button>' +
