--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			margin-bottom: 15px;
 		}
 	</style>
-
+<link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -193,6 +193,17 @@
     	document.body.removeChild(dummy);
 		}
 
+	</script>
+	<script>
+		if ('serviceWorker' in navigator) {
+			console.log("Will the service worker register?");
+			navigator.serviceWorker.register('service-worker.js')
+				.then(function(reg){
+					console.log("Yes, it did.");
+				}).catch(function(err) {
+					console.log("No it didn't. This happened: ", err)
+				});
+		}
 	</script>
 </body>
 
